--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
          html{
             height: -webkit-fill-available;
         }
-
         body {
             margin: 0;
             padding: 0;
@@ -18,7 +17,6 @@
             width: 100vw;
             overflow: hidden;
         }
-
         .ctaDiv {
             display: flex;
             flex-direction: column;
@@ -33,11 +31,20 @@
             z-index: 99;
         }
     </style>
-
 </head>
 <body>
     <script src="app.js" type="text/javascript"></script>
     <!--IMAGETARGETS-->
+		<imagetarget id='bfly' src='targets/bfly.png'></imagetarget>
+		<imagetarget id='flower' src='targets/flower.png'></imagetarget>
+		<imagetarget id='lady' src='targets/lady.png'></imagetarget>
+		<imagetarget id='reel' src='targets/reel.png'></imagetarget>
+		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
+		<imagetarget id='bear' src='targets/bear.png'></imagetarget>
+		<imagetarget id='1-1' src='targets/1-1.png'></imagetarget>
+		<imagetarget id='1-2' src='targets/1-2.png'></imagetarget>
+		<imagetarget id='end' src='targets/end.jpg'></imagetarget>
+
     <div id="startWebcamDiv" class="ctaDiv">
         <p style="text-align: center; width:60vw">This augmented reality experience requires access to your device's camera</p>
         <button id="startCameraBtn" onclick="StartCamera()" style="display:none">ALLOW ACCESS</button>
@@ -45,7 +52,6 @@
     <div id="startWebcamManuallyDiv" style="display: none" class="ctaDiv">
         <button onclick="StartCameraManually()" style="width:180px; height:40px; border:1px solid gray; border-radius:8px">START WEBCAM</button>
     </div>
-
     <div id="unity-container" class="unity-desktop">
         <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #0000; z-index: -99"></canvas>
         <div id="unity-loading-bar">
@@ -55,27 +61,24 @@
             </div>
         </div>
     </div>
-    <script src="Build/20231121.loader.js"></script>
+    <script src="Build/1121.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
             var loadingBar = document.querySelector("#unity-loading-bar");
             var progressBarFull = document.querySelector("#unity-progress-bar-full");
-
             if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
                 container.className = "unity-mobile";
             }
-
             function StartCamera() {
                 canvas.style.width = window.innerWidth + "px";
                 canvas.style.height = window.innerHeight + "px";
                 
                 document.getElementById("startWebcamDiv").style.display = "none";
-
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/20231121.data",
-                    frameworkUrl: "Build/20231121.framework.js",
-                    codeUrl: "Build/20231121.wasm",
+                    dataUrl: "Build/1121.data",
+                    frameworkUrl: "Build/1121.framework.js",
+                    codeUrl: "Build/1121.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "chihleear",
@@ -91,7 +94,6 @@
                     window.gameInstance = unityInstance;
                     window.unityInstance = unityInstance;
                     window.iTracker.startWebcam();
-
                     //[FIX]: some browsers (such as Wechat) does not allow webcam autoplay so we need to start the webcam manually via new button press
                     window.waitForVideo = () => {
                         setTimeout(() => {
@@ -104,18 +106,14 @@
                         }, 2500)
                     };
                     window.waitForVideo();
-
                     loadingBar.style.display = "none";
                 });
-
                 loadingBar.style.display = "block";
             }
-
             function StartCameraManually() {
                 document.getElementById("startWebcamManuallyDiv").style.display = "none";
                 iTracker.VIDEO.play()
             }
-
     </script>
 </body>
 </html>
