--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<imagetarget id='6-1' src='targets/6-1.png'></imagetarget>
 		<imagetarget id='6-2' src='targets/6-2.png'></imagetarget>
 		<imagetarget id='test' src='targets/test.png'></imagetarget>
+		<imagetarget id='FINAL-41' src='targets/FINAL-41.png'></imagetarget>
 
     <div id="startWebcamDiv" class="ctaDiv">
         <p style="text-align: center; width:60vw">This augmented reality experience requires access to your device's camera</p>
